# ai-engineering-buildcamp-codespace

./: main.py  pyproject.toml
01-foundation/02-rag/: openai_test.ipynb  rag.ipynb  test.ipynb  testapi.py
03-structured-output/: notebook.ipynb  streaming.ipynb
