[project]
name = "ai-engineering-buildcamp-codespace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gitsource>=0.0.5",
    "google-genai>=2.10.0",
    "jaxn>=0.0.5",
    "jupyter>=1.1.1",
    "minsearch>=0.2.0",
    "openai>=2.44.0",
    "python-frontmatter>=1.3.0",
    "requests>=2.34.2",
]
